--- a/RSSReader/View/Base.lproj/Main.storyboard
+++ b/RSSReader/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0wG-Ni-6dF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="biY-f4-iUP">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,70 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--News View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="NewsViewController" customModule="RSSReader" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lBB-MC-FN9">
-                                <rect key="frame" x="0.0" y="91" width="390" height="719"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="NewsCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsCell" id="Qo7-WU-gy6" customClass="NewsTableViewCell" customModule="RSSReader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.333332061767578" width="390" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qo7-WU-gy6" id="rbT-V7-79G">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lBB-MC-FN9" secondAttribute="trailing" id="12G-6H-8KW"/>
-                            <constraint firstItem="lBB-MC-FN9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5jA-Uk-stJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lBB-MC-FN9" secondAttribute="bottom" id="Izr-xV-oro"/>
-                            <constraint firstItem="lBB-MC-FN9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ryK-BT-N1i"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="PAy-eX-ZIu"/>
-                    <connections>
-                        <outlet property="tableView" destination="lBB-MC-FN9" id="BXp-Hb-ie7"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1660" y="-28"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="dTN-bI-Zmw">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0wG-Ni-6dF" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GOg-ua-PqV">
-                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" systemColor="systemOrangeColor"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="kvb-17-ij2" kind="relationship" relationship="rootViewController" id="sjf-kj-qUq"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Ds-Zo-ayC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-174" y="-28"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="TSw-p1-poB">
             <objects>
-                <viewController id="kvb-17-ij2" customClass="ViewController" customModule="RSSReader" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainVC" id="kvb-17-ij2" customClass="ViewController" customModule="RSSReader" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kl9-sv-DAU">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -85,7 +25,6 @@
                                 <buttonConfiguration key="configuration" style="gray" title="Search"/>
                                 <connections>
                                     <action selector="searchBtnClicked:" destination="kvb-17-ij2" eventType="touchUpInside" id="HNS-3W-lim"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="toNewsViewControllerSegue" id="khh-Tb-1Ee"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter url" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="upK-Fm-cLn">
@@ -106,6 +45,21 @@
                                 <color key="textColor" systemColor="systemOrangeColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryY-Dg-Mnw">
+                                <rect key="frame" x="155" y="372" width="80" height="100"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="lDz-TD-Jyd">
+                                        <rect key="frame" x="30" y="40" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="7VP-mm-8nl"/>
+                                    <constraint firstAttribute="height" constant="100" id="97Z-4k-4H7"/>
+                                    <constraint firstItem="lDz-TD-Jyd" firstAttribute="centerY" secondItem="ryY-Dg-Mnw" secondAttribute="centerY" id="POy-tB-H20"/>
+                                    <constraint firstItem="lDz-TD-Jyd" firstAttribute="centerX" secondItem="ryY-Dg-Mnw" secondAttribute="centerX" id="g0l-jG-pKx"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Tjd-78-Fw3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -113,7 +67,9 @@
                             <constraint firstItem="Tjd-78-Fw3" firstAttribute="trailing" secondItem="sD1-g8-DqO" secondAttribute="trailing" constant="120" id="2Bz-u1-C5j"/>
                             <constraint firstItem="Tjd-78-Fw3" firstAttribute="trailing" secondItem="upK-Fm-cLn" secondAttribute="trailing" constant="45" id="3r3-1a-JQK"/>
                             <constraint firstItem="upK-Fm-cLn" firstAttribute="top" secondItem="JjV-0W-lm3" secondAttribute="bottom" constant="95" id="JsF-Pf-GQN"/>
+                            <constraint firstItem="ryY-Dg-Mnw" firstAttribute="centerX" secondItem="kl9-sv-DAU" secondAttribute="centerX" id="Rej-hL-drn"/>
                             <constraint firstItem="upK-Fm-cLn" firstAttribute="leading" secondItem="Tjd-78-Fw3" secondAttribute="leading" constant="45" id="UgV-Ww-VCb"/>
+                            <constraint firstItem="ryY-Dg-Mnw" firstAttribute="centerY" secondItem="kl9-sv-DAU" secondAttribute="centerY" id="YdC-YT-s7p"/>
                             <constraint firstItem="sD1-g8-DqO" firstAttribute="top" secondItem="upK-Fm-cLn" secondAttribute="bottom" constant="60" id="eZB-V1-9hp"/>
                             <constraint firstItem="sD1-g8-DqO" firstAttribute="leading" secondItem="Tjd-78-Fw3" secondAttribute="leading" constant="120" id="pcH-0l-TRk"/>
                             <constraint firstItem="JjV-0W-lm3" firstAttribute="top" secondItem="Tjd-78-Fw3" secondAttribute="top" constant="60" id="rSc-tH-mOe"/>
@@ -125,11 +81,32 @@
                     </view>
                     <navigationItem key="navigationItem" id="Bcl-89-U8T"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="lDz-TD-Jyd" id="Q52-8b-INQ"/>
                         <outlet property="errorLbl" destination="rWf-z5-3VE" id="cvU-gr-vMY"/>
+                        <outlet property="loadingView" destination="ryY-Dg-Mnw" id="G4W-Bm-5sm"/>
+                        <outlet property="searchBtn" destination="sD1-g8-DqO" id="rFL-d4-wu7"/>
                         <outlet property="textField" destination="upK-Fm-cLn" id="Qn8-4A-moD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8B0-6G-drh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1660" y="-28.436018957345969"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Vq0-QM-vcT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="biY-f4-iUP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Wn0-UG-Wk5">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kvb-17-ij2" kind="relationship" relationship="rootViewController" id="bjN-Ai-wrm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X7T-ZB-kTc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="730.76923076923072" y="-28.436018957345969"/>
         </scene>
